# oop_example

./: .gitignore  BaseTask.hpp  CMakeLists.txt  CMakePresets.json  Logger.cpp  Logger.hpp  README.md  TUI.cpp  TUI.hpp  Task.cpp  Task.hpp  TaskList.cpp  TaskList.hpp  main.cpp
